fixed hover effects and some spacing on headers

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,15 +8,15 @@ body {
 
 @layer components {
     .btn {
-        @apply bg-[#000000] text-white px-3 py-1 rounded-xl text-xs flex w-fit;
+        @apply  text-white px-3 py-1 border rounded-lg text-xs flex w-fit;
     }
 
     .card {
-        @apply p-5 rounded-md border border-[#bfbfbf] shadow-md h-full;
+        @apply p-5 rounded-xl border border-[#bfbfbf] shadow-md h-full;
     }
 
     .project-card {
-        @apply rounded-md shadow-md h-full;
+        @apply rounded-xl shadow-md h-full border border-[#595959];
     }
 
     .text-secondary {
